Title: Add pancake recipe and CSS styling
Desc: Added some additional lines to the recipe. Also, added some
styling, via external css.

--- a/recipes/vegan-buttermilk-pancakes-and-tofu.html
+++ b/recipes/vegan-buttermilk-pancakes-and-tofu.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Vegan Buttermilk Pancakes</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Fluffy Vegan Buttermilk Pancakes (Just 6 ingredients 😋!)</h1>
+        <h1 class="pancake-title">Fluffy Vegan Buttermilk Pancakes (Just 6 ingredients 😋!)</h1>
 
         <p>These Vegan Buttermilk Pancakes are the best, thick and fluffy vegan pancakes. Whip up a stack this weekend in 20
         minutes or less with simple ingredients you can find anywhere.</p>
@@ -34,7 +35,7 @@
             </li>
         </ul>
 
-        <img src="../images/Vegan-Buttermilk-Pancakes.jpg" height="900px" width="600px" alt="Vegan Buttermilk Pancakes">
+        <img class="vegan-buttermilk-pancakes" src="../images/Vegan-Buttermilk-Pancakes.jpg" alt="Vegan Buttermilk Pancakes">
 
         <h1>Key Ingredients and Substitutions</h1>
         <ul>
@@ -102,6 +103,8 @@
         </ol>
     </p>
 
-    <a href="../index.html">Home</a>
-    </body>
+    <!-- "Quasi home-button" Just realized I'll actually need JS/TS and stuff to get this
+    to work as expected -->
+    <form action="../index.html">
+        <button class="home-button"> home </button>
 </html>
